// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status render animated 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  75%, 100% {
    -webkit-transform: scale(2);
    -moz-transform: scale(2);
    -ms-transform: scale(2);
    transform: scale(2);
    opacity: 0;
  }
}

.cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-108s4hl-StyledAnimatedCircle {
  position: absolute;
  width: 10px;
  height: 10px;
  opacity: 0.75;
  border-radius: 100%;
  -webkit-animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  animation: animation-0 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  background-color: #45d19f;
}

.cache-hxreh8-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #45d19f;
}

<span
    class="cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-108s4hl-StyledAnimatedCircle eny0xmn1"
    />
    <span
      class="cache-hxreh8-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status render with className 1`] = `
<DocumentFragment>
  .cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-hxreh8-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #45d19f;
}

<span
    class="test cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-hxreh8-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="danger" 1`] = `
<DocumentFragment>
  .cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-6g00ox-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #dd3252;
}

<span
    class="cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-6g00ox-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="info" 1`] = `
<DocumentFragment>
  .cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-3mqsje-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #0078d2;
}

<span
    class="cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-3mqsje-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="neutral" 1`] = `
<DocumentFragment>
  .cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-197fzv5-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #151a2d;
}

<span
    class="cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-197fzv5-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="success" 1`] = `
<DocumentFragment>
  .cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-hxreh8-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #45d19f;
}

<span
    class="cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-hxreh8-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;

exports[`Status renders correctly with type="warning" 1`] = `
<DocumentFragment>
  .cache-1oymmk9-Container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 10px;
  height: 10px;
}

.cache-p1a4wa-StyledCircle {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 100%;
  background-color: #fbc600;
}

<span
    class="cache-1oymmk9-Container eny0xmn0"
  >
    <span
      class="cache-p1a4wa-StyledCircle eny0xmn2"
    />
  </span>
</DocumentFragment>
`;
